# gst-demon

./: TESTING.md  build-gst-interpipe.sh  cleanup-nix-store.sh  flake-copy-draft.nix  flake.nix  gst_android_integration_doc.md  gst_android_quick_ref.md  info-gst-demon.md  test-build.nix  test-nix-android-complete.sh
.idx/: README.md  dev.nix
.idx/.backup-to-evaluate/: environment.nix  packages.nix  previews.nix  workspace.nix
.idx/cross-files/: android-aarch64.ini  android-armv7a.ini  android-x86_64.ini  default.nix
.idx/modules/: android-architectures.nix  chromium-wrapper.nix  config.nix  dev-tools.nix  environment.nix  help-command.nix  packages.nix  packages.nix.backup  setup-android.nix  vscode-wrapper.nix  workspace.nix
.idx/modules/gstreamer-android/: default.nix  gstreamer-source.nix
.idx/modules/gstreamer-daemon/: android-build.nix  android-libs-bundle.nix  android-libs.nix  default.nix  gstd-android-libs.nix  gstd-android.nix  gstd.nix  how-build.md  how-test.md  interpipe-android.nix  interpipe.nix  service.nix
.idx/modules/scripts/: create-build-script.nix  default.nix  setup-gstreamer.nix  setup-openssl.nix
.idx/modules/setup/: build-script.nix  gstreamer.nix  openssl.nix  rust.nix
.idx/overlays/: android-sdk.nix  android.nix  cross-android.nix  default.nix
.idx/patches/: gstd-as-library.patch  how-patch.md
.idx/scripts/: build-gstd-android.sh  setup-android-env.sh
agdk-eframe/app/src/main/cpp/: CMakeLists.txt  gstd_wrapper.c
agdk-eframe/app/src/main/java/co/realfit/agdkeframe/: GstdNative.kt  MainActivity.kt
